kubernetes/monitor/prometheus-grafana/grafana-6.x/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: kubernetes-dashboard
  labels:
    app: grafana
    component: core
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: grafana
    component: core
